# claude-bench

./: .gitignore  CLAUDE.md  README.md
docs/: plan.md  product-requirements.md  tech-decisions.md
scanner/: pyproject.toml
scanner/claude_bench/: __init__.py  __main__.py  cli.py  report.py  rubric.py  scanner.py  submit.py
scanner/tests/: test_rubric.py  test_scanner.py
web/: package.json  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/api/badge/[id]/: route.ts
web/src/app/api/scores/: route.ts
web/src/app/profile/[id]/: copy-button.tsx  page.tsx
web/src/app/submit/: page.tsx
web/src/components/: copy-button.tsx  dimension-breakdown.tsx  install-block.tsx  leaderboard-table.tsx  radar-chart.tsx  score-card.tsx
web/src/lib/: dimensions.ts  mock-data.ts  supabase.ts
